Fixed spacing in mobile navbar

--- a/static/css/light.css
+++ b/static/css/light.css
@@ -94,6 +94,19 @@ nav li {
     display: none;
 }
 
+@media (max-width: 991px) {
+	.navbar-collapse {
+		width: 100%
+	}
+	#nav-options>li>a {
+		border: none;
+	}
+	#order-now-link {
+		display: block;
+		margin: 0 auto;
+	}
+}
+
 @media (min-width: 768px) and (max-width: 991px) {
     .navbar-collapse.collapse {
         display: none !important;
